# teleproxy

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  build.rs  config.toml  go.mod  go.sum
.github/workflows/: docker.yml  post-release.yml  pre-release.yml  release.yml
cmd/teleproxy/: main.go
cmd/teleproxy/client/: client.go
cmd/teleproxy/client/admin/: admin.go
cmd/teleproxy/client/dump/: dump.go
cmd/teleproxy/server/: server.go
docs/: README.md
examples/config/: config.yaml
pkg/teleproxy/: config.go  config_test.go  proxy.go
pkg/teleproxy/client/: client.go
pkg/teleproxy/config/: config.go  config_test.go
pkg/teleproxy/dto/: http_request_dto.go
pkg/teleproxy/dto/header_values/: header_values.go
pkg/teleproxy/dto/http_request/: http_request_dto.go
pkg/teleproxy/dto/http_response/: http_response_dto.go
pkg/teleproxy/dto/httprequest/: http_request.go
pkg/teleproxy/dto/httpresponse/: http_response.go
pkg/teleproxy/proxy/: proxy.go
pkg/teleproxy/server/: server.go
pkg/teleproxy/spyconfig/: spyconfig.go
pkg/teleproxy/spyconfigs/: spyconfigs.go  spyconfigs_test.go
pkg/teleproxy/util/: log.go
proto/: teleproxy.proto
protobuf/: teleproxy.pb.go  teleproxy.proto  teleproxy_grpc.pb.go
scripts/: pre-build-linux.sh  pre-build-windows.ps1  pre-build.sh
src/: main.rs
src/cli/: client.rs  mod.rs  server.rs
src/client/: http_client.rs  mod.rs
src/config/: mod.rs  server.rs
src/dto/: header.rs  http_request.rs  http_response.rs  listen_request.rs  listen_response.rs  mod.rs  phase.rs
src/forwardconfig/: config.rs  header.rs  mod.rs  store.rs
src/forwardhandler/: mod.rs
src/proto/: mod.rs
src/proxy/: mod.rs  service.rs
src/server/: mod.rs  service.rs
