[package]
name = "teleproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait="0.1"
clap = { version = "4.5.6", features = ["derive"] }
env_logger = "0.11.3"
header = "0.1.1"
http = "1.1.0"
log = "0.4.21"
nanoid = "0.4.0"
pingora = { version = "0.2", features = [ "lb" ] }
pingora-proxy = "0.2.0"
prost = "0.12.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.10"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
ulid = "1.1.2"

[build-dependencies]
tonic-build = { version = "0.11.0" }
