[package]
name = "teleproxy"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = '''
Spy on HTTP Request using Header.
'''
homepage = "https://github.com/BeLeap/teleproxy"
repository = "https://github.com/BeLeap/teleproxy"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"

[dependencies]
async-trait="0.1"
clap = { version = "4.5.6", features = ["derive"] }
env_logger = "0.11.3"
header = "0.1.1"
http = "1.1.0"
log = "0.4.21"
pingora = { version = "0.2", features = [ "lb" ] }
pingora-core = "0.2.0"
pingora-proxy = "0.2.0"
prost = "0.12.6"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.10"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
ulid = "1.1.2"

[build-dependencies]
tonic-build = { version = "0.11.0" }
